# OpenGL_Sandbox

./: .gitignore  configure.sh  main.cpp  run.sh
src/: CMakeLists.txt  Color.cpp  Color.h  GLErrorHandler.cpp  GLErrorHandler.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp
